fix(i18n): add twitter hashtag

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -213,8 +213,8 @@ ifrc:
     onlineNow: مباشر الآن
     carbonSaved: التقليل من انبعاثات الكربون
     #twitterTitle: Social
-    #twitterSubtitle: 'تغريدة مع #PlanetRed'
-    #twitterUrl: 'https://twitter.com'
+    twitterSubtitle: 'تغريدة مع #PlanetRedSummit'
+    twitterUrl: 'https://twitter.com/hashtag/PlanetRedSummit'
     #conferenceOver: Planet:Red has now ended, but it's not over! You can still access the sessions and keynotes on the schedule tab!
 
   footer:
