--- a/src/i18n/es.yml
+++ b/src/i18n/es.yml
@@ -213,8 +213,8 @@ ifrc:
     onlineNow: En línea ahora
     carbonSaved: Kilogramos de CO₂ ahorrados
     #twitterTitle: Social
-    #twitterSubtitle: 'Tuitear con #PlanetRed'
-    #twitterUrl: 'https://twitter.com'
+    twitterSubtitle: 'Tuitear con #PlanetRedSummit'
+    twitterUrl: 'https://twitter.com/hashtag/PlanetRedSummit'
     #conferenceOver: Planet:Red has now ended, but it's not over! You can still access the sessions and keynotes on the schedule tab!
 
   footer:
