--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -223,3 +223,7 @@ ifrc:
     guidelines: المبادئ التوجيهية
     terms: الشروط
     faqs: أسئلة وأجوبة
+
+  notFound:
+    title: الصفحة غير موجودة
+    info: لم نتمكن من العثور على الصفحة التي كنت تبحث عنها، يرجى التحقق من الرابط الذي نقرت عليه أو العودة إلى الملتقى الرئيسي.
