fix: add "days" translation

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -28,6 +28,7 @@ deconf:
     #workshops: 'None | 1 workshop | {n} workshops'
 
   general:
+    #days: days | day | days
     #hours: hours | hour | hours
     #minutes: minutes | minute | minutes
     #seconds: seconds | second | seconds
