--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -201,7 +201,7 @@ ifrc:
       help: 'جهة الانتماء (على سبيل المثال: موظف/متطوع/عضو مجلس إدارة/عضو جمعية وطنية/الاتحاد الدولي لجمعيات الصليب الأحمر والهلال الأحمر/اللجنة الدولية للصليب الأحمر/المركز المرجعي، أو غير ذلك )'
     submitButton: تسجيل
     consentText: أؤكد أنني قد قرأت وأوافق على السياسات الموجودة في الرابط أدناه
-    #marketingText: I consent to marketing emails from XYZ
+    marketingText: أنا أوافق على الانضمام إلى القائمة البريدية لأكاديمية سولفرينو التابعة للاتحاد الدولي لجمعيات الصليب الأحمر والهلال الأحمر
     termsLink: الأحكام والشروط
     privacyLink: سياسة الخصوصية
     #loginLabel: Already registered?
@@ -224,6 +224,7 @@ ifrc:
     guidelines: المبادئ التوجيهية
     terms: الشروط
     faqs: أسئلة وأجوبة
+    contact: اتصل
 
   notFound:
     title: الصفحة غير موجودة
