--- a/src/i18n/es.yml
+++ b/src/i18n/es.yml
@@ -180,7 +180,7 @@ ifrc:
   register:
     title: Registrarse
     infoText: >
-      Registrarse para el Climate:Red
+      Registrarse para el Planet:Red
     name:
       label: Nombre completo
       placeholder: por ejemplo, Dan Howard
@@ -201,7 +201,7 @@ ifrc:
       help: Afiliación con el MICR (por ejemplo, personal / voluntario / miembro de la junta / miembro de la sociedad nacional / FICR / CICR / centro de referencia; o ninguno)
     submitButton: Registrarse
     consentText: Confirmo que he leído y estoy de acuerdo con las políticas relacionadas a continuación
-    #marketingText: I consent to marketing emails from XYZ
+    marketingText: Doy mi consentimiento para unirme a la lista de correo de la Academia Solferino de la FICR.
     termsLink: Términos y Condiciones
     privacyLink: Política de privacidad
     #loginLabel: Already registered?
@@ -224,6 +224,7 @@ ifrc:
     guidelines: Directrices
     terms: Términos
     faqs: FAQ
+    contact: Contacto
 
   notFound:
     title: Página no encontrada
