--- a/src/i18n/es.yml
+++ b/src/i18n/es.yml
@@ -236,8 +236,8 @@ ifrc:
     source: Desde el vídeo
     start: Comienzo
     stop: Pare
-    #isOnline: Channel is live
-    #isOffline: Channel is offline
+    isOnline: el canal esta en vivo
+    isOffline: el canal está desconectado
     stopped: parado
     playing: reproduciendo
     buffering: cargando {0}
