--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -108,7 +108,7 @@ deconf:
     #unavailable: ' (Unavailable)'
 
   whatsOn:
-    #title: What's On
+    #title: الأحداث
     #infoText: Browse the Schedule before release day
 
   login:
@@ -136,7 +136,7 @@ deconf:
       emailText: بريدك الالكتروني
       localeText: اللغة المختارة
       whenText: تسجيل الدخول
-      #registeredText: Registered
+      registeredText: مسجل
       nameText: الإسم
       countryText: البلد
       affiliationText: جهة الانتساب
@@ -145,8 +145,8 @@ deconf:
   schedule:
     title: جدول المواعيد
     description: تصفح الجلسات المتاحة وقم بوضع خطة لتجربتك عن طريق إضافة تذكير إلى التقويم الخاص بك.
-    #allSessions: الكل
-    #userSessions: المستعمل
+    allSessions: الكل
+    userSessions: المستعمل
     hidePast: إخفاء الجلسات القديمة
     showPast: إظهار الجلسات السابقة
     #noResults: Nothing matched your query
@@ -162,7 +162,7 @@ deconf:
     #zoomLink: Zoom Room
     #teamsLink: Teams Meeting
     #miroLink: Miro Board
-    #generalLink: Link
+    generalLink: وصلة
     #backButton: العودة إلى الجدول
 
 #
